--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,4 +1,4 @@
-.loader__background {
+.loaderBackground {
   background-color: #000;
   box-sizing: border-box;
   height: 100%;
@@ -12,32 +12,35 @@
   z-index: 1500;
 }
 
-.loader__container {
-  left: 49%;
+.loaderContainer {
+  left: 45%;
   margin: -75px 0 0 -75px;
   position: absolute;
   top: 50%;
   padding: 30px;
 }
 
-.loader__text {
+.loaderText {
   color:#FFF;
   text-align: left;
   z-index: 1550;
+  font-family: 'RussoOne';
   font-size: 36px;
+  font-weight: 500;
   float: left;
 }
 
-.loader__dots__div {
+.loaderDotsDiv {
   width: 48px;
   text-align: right;
   float: left;
-  margin-top: 21px;
+  margin-top: 18px;
 }
 
-.loader__dots {
-  width: 14px;
-  height: 14px;
+.loaderDots {
+  margin-right: 4px;
+  width: 10px;
+  height: 10px;
   background-color: #FFF;
   border-radius: 100%;
   display: inline-block;
