--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,15 @@
 body {
   margin: 0;
 }
+@font-face {
+  font-family: "Russo One";
+  src:
+    local("Russo One"),
+    url("./assets/fonts/RussoOne-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Exo 2";
+  src:
+    local("Exo 2"),
+    url("./assets/fonts/Exo2-Italic-VariableFont_wght.ttf") format("truetype");
+}
