--- a/src/main.css
+++ b/src/main.css
@@ -3,13 +3,9 @@ body {
 }
 @font-face {
   font-family: "Russo One";
-  src:
-    local("Russo One"),
-    url("./assets/fonts/RussoOne-Regular.ttf") format("truetype");
+  src: local("Russo One"), url("./assets/fonts/RussoOne-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "Exo 2";
-  src:
-    local("Exo 2"),
-    url("./assets/fonts/Exo2-Italic-VariableFont_wght.ttf") format("truetype");
+  src: local("Exo 2"), url("./assets/fonts/Exo2-Italic-VariableFont_wght.ttf") format("truetype");
 }
